log
Thu 05 Oct 2023 10:11:16 PM UTC: 
 heap.c | 14 +++++++++++++-
 1 file changed, 13 insertions(+), 1 deletion(-)
In file included from test.c:4:
heap.c: In function ‘createHeap’:
heap.c:41:7: error: array subscript ‘Heap {aka struct Heap}[0]’ is partly outside array bounds of ‘unsigned char[8]’ [-Werror=array-bounds]
   41 |   heap->capac = 3;
      |       ^~
heap.c:36:24: note: referencing an object of size 8 allocated by ‘malloc’
   36 |   Heap* heap = (Heap*) malloc (sizeof(Heap*));
      |                        ^~~~~~~~~~~~~~~~~~~~~~
heap.c:42:7: error: array subscript ‘Heap {aka struct Heap}[0]’ is partly outside array bounds of ‘unsigned char[8]’ [-Werror=array-bounds]
   42 |   heap->heapArray = (heapElem*) malloc (sizeof(heapElem*) * heap->capac);
      |       ^~
heap.c:36:24: note: referencing an object of size 8 allocated by ‘malloc’
   36 |   Heap* heap = (Heap*) malloc (sizeof(Heap*));
      |                        ^~~~~~~~~~~~~~~~~~~~~~
heap.c:48:7: error: array subscript ‘Heap {aka struct Heap}[0]’ is partly outside array bounds of ‘unsigned char[8]’ [-Werror=array-bounds]
   48 |   heap->size = 0;
      |       ^~
heap.c:36:24: note: referencing an object of size 8 allocated by ‘malloc’
   36 |   Heap* heap = (Heap*) malloc (sizeof(Heap*));
      |                        ^~~~~~~~~~~~~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
3af55f6
Thu 05 Oct 2023 10:12:41 PM UTC: 
 heap.c | 5 +++--
 1 file changed, 3 insertions(+), 2 deletions(-)
 tests:  1|3
total_score: 10/70
0a564a7
Thu 05 Oct 2023 10:16:01 PM UTC: 
 heap.c | 4 ++++
 1 file changed, 4 insertions(+)
 tests:  2|2
total_score: 20/70
d629276
Thu 05 Oct 2023 10:18:30 PM UTC: 
 heap.c | 13 ++++++++++++-
 1 file changed, 12 insertions(+), 1 deletion(-)
 tests:  2|2
total_score: 20/70
976a06e
Thu 05 Oct 2023 10:26:15 PM UTC: 
 heap.c | 14 ++++++++++++++
 1 file changed, 14 insertions(+)
 tests:  7|1
total_score: 45/70
1da1004
Thu 05 Oct 2023 10:35:20 PM UTC: 
 heap.c | 27 ++++++++++++++++++++++++++-
 1 file changed, 26 insertions(+), 1 deletion(-)
In file included from test.c:4:
heap.c: In function ‘heap_pop’:
heap.c:84:29: error: expected ‘;’ before ‘}’ token
   84 |        right = index * 2 + 2
      |                             ^
      |                             ;
   85 |      }
      |      ~                       
Compilation failed
4b6c249
